# python-playground

./: .gitignore  README.md  create-python3-project.sh  python-crash-course.html  python_crash_course.html
abstract-base-class/: README.md
aes-encryption-fun/: run.sh
airflow/: README.md
any-and-all/: README.md
async-io-fun/: README.md
auto-commit/: auto-commit.py  auto-commit.sh  contab.md  install-macos.sh  macos.md  run-background.sh  test.sh
bag-of-cats/: .nvimlog  basics.py  control-flow.py  dicts.py  lists.py  sumtwo.py
basic-date-time/: hours.py
basic-lang-fun/: dicts.py  funcs.py  ifelse.py  iterators.py  lists-comprehension.py  lists.py  loops.py  oop-inheritance.py  oop.py  sets.py  strings-modifys.py  strings-slice.py  strings.py  tuples.py
bouncing-ball/: README.md
celery-flower/: app.py  requirements.txt  run-flower.sh
celery-hello/: app.py
claude-code-python/: README.md
coded/: README.md
comparisons/: README.md
context-manager/: README.md
cyclone/: bottle.py  foobar.tac  hellocyclone.py
dagster-fun/: README.md  run.sh
data-class/: README.md
dbt-fun/: README.md  docker-compose.yml  requirements.txt  run.sh  start.sh
decorator-but-i-will-call-annotations/: README.md
deep-shallow-object-copy/: README.md
dictionary-meerge/: README.md
dis/: README.md
django-redirect-go/: README.md  clean.sh  docker-compose.yml  init.sql  run.sh  test.sh
dumb-virtual-fs/: README.md
python-essentials-pyproject/: README.md  install-deps.sh  pyproject.toml  run.sh
python-essentials-pyproject/src/greeter/: __init__.py  cli.py
(+319 files in other folders)
